fixed div alignment

--- a/styles.css
+++ b/styles.css
@@ -37,16 +37,21 @@ input[type="number"] {
     max-width: 3rem;
 }
 
-fieldset {
+#information, fieldset {
+    display: block;
     width: 50vw;
     max-width: 600px;
     max-height: 1000px;
-    margin: auto auto;
+    margin: 1em auto;
     border-radius: 10px;
     border-width: 0;
     background-color: darkslateblue;
+    padding-top: 0.35em;
+    padding-bottom: 0.625em;
+    padding-left: 0.75em;
+    padding-right: 0.75em;
 }
 
-legend {
+h2 {
     text-align: center;
 }
